[gd_scene load_steps=14 format=3 uid="uid://bpvdwoy74ej2g"]

[ext_resource type="Script" path="res://demo_3d.gd" id="1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xlt0p"]
sky_top_color = Color(0.0980392, 0.243137, 0.580392, 1)

[sub_resource type="Sky" id="Sky_2u0uf"]
sky_material = SubResource("ProceduralSkyMaterial_xlt0p")

[sub_resource type="Environment" id="Environment_msoaf"]
background_mode = 2
sky = SubResource("Sky_2u0uf")
ambient_light_source = 3
reflected_light_source = 2
ssr_enabled = true
ssao_enabled = true

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(8, 0.2, 8)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(8, 0.2, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_byn07"]
albedo_color = Color(0.403922, 0.721569, 1, 1)

[sub_resource type="CylinderMesh" id="3"]
height = 0.1
radial_segments = 6
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_or5sn"]
albedo_color = Color(0.658824, 0.443137, 0.160784, 1)

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(8, 0.2, 4)

[sub_resource type="BoxMesh" id="9"]
size = Vector3(8, 0.2, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3kp74"]
albedo_color = Color(0.0901961, 0.580392, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ukot"]
albedo_color = Color(0.513726, 1, 0.741176, 1)

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 5)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_msoaf")

[node name="HexGrid" type="StaticBody3D" parent="."]
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HexGrid"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HexGrid"]
mesh = SubResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_byn07")

[node name="Highlight" type="MeshInstance3D" parent="HexGrid"]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.2, 0)
mesh = SubResource("3")
surface_material_override/0 = SubResource("StandardMaterial3D_or5sn")

[node name="HexCoords" type="Label3D" parent="HexGrid/Highlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
billboard = 1

[node name="PlaneCoords" type="Label3D" parent="HexGrid/Highlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
billboard = 1

[node name="HexGrid2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3, -2)
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HexGrid2"]
shape = SubResource("8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HexGrid2"]
mesh = SubResource("9")
surface_material_override/0 = SubResource("StandardMaterial3D_3kp74")

[node name="Highlight" type="MeshInstance3D" parent="HexGrid2"]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.2, 0)
mesh = SubResource("3")
surface_material_override/0 = SubResource("StandardMaterial3D_8ukot")

[node name="HexCoords" type="Label3D" parent="HexGrid2/Highlight"]
transform = Transform3D(1, 0, 3.11291e-22, 0, 1, 0, 3.11291e-22, 0, 1, 0.1, 0.1, 0)
billboard = 1

[node name="PlaneCoords" type="Label3D" parent="HexGrid2/Highlight"]
transform = Transform3D(1, 0, 3.11291e-22, 0, 1, 0, 3.11291e-22, 0, 1, -0.151, 0.1, 0)
billboard = 1

[connection signal="input_event" from="HexGrid" to="HexGrid" method="_on_HexGrid_input_event"]
[connection signal="input_event" from="HexGrid2" to="HexGrid2" method="_on_HexGrid_input_event"]
